--- a/backend/.env
+++ b/backend/.env
@@ -7,10 +7,11 @@ JWT_SECRET=troque_por_um_valor_seguro_e_real
 
 # Banco de Dados PostgreSQL - ADICIONE AS INFORMAÇÕES CORRETAS AQUI
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5433
 DB_USER=postgres
 DB_PASSWORD=senha123
-DB_DATABASE=sistema-suas-db bash
+DB_DATABASE=postgres
+PORT=4000
 # Outras variáveis que você já tinha
 NEWS_SOURCE_URL=https://patos.pb.gov.br/noticias
 VITE_API_URL=http://localhost:4000
